--- a/client/client/src/app/app.component.html
+++ b/client/client/src/app/app.component.html
@@ -12,7 +12,7 @@
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let user">{{user.name}}</td>
     </ng-container>
-    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+    <tr mat-header-row *matHeaderRowDef="col3umnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
   </table>
 </div>
